--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -25,4 +25,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./tests/Kyameru.Component.Slack.Tests/TestCoverage/coverage.info 
+          path-to-lcov: ./tests/UnitTests/Kyameru.Component.Slack.Tests/TestCoverage/coverage.info 
